# vdsh

./: .gitignore  README.md  justfile  pyproject.toml  vdsh.grammer
examples/: func.vdsh  main.vdsh
shellcodes/: any_syscall.S  build.py  clock_gettime.S
src/: poc.py  poc.sh
src/lib/: bits.sh  log.sh  string.sh
tests/: test_tokenizer.py
tests/char_iterators/: test_char_iterator.py  test_peekable_char_iterator.py
tests/iterators/: test_peekable_iterator.py  test_sequence_iterator.py
tests/pipeline/: test_parser.py  test_tokenizer.py
vdsh/cli/: __main__.py  context.py  logger.py
vdsh/cli/commands/: __init__.py  build.py  misc.py  parse.py  parser.py  run.py  tokenize.py  tokenizer.py
vdsh/core/: errors.py  types.py
vdsh/core/iterator/: __init__.py  base_iterator.py  peekable_iterator.py  sequence_iterator.py
vdsh/core/models/: __init__.py  ast.py  position.py  token.py
vdsh/core/pipeline/: __init__.py  char_iterator.py  code_generator.py  optimizer.py  parser.py  pipeline.py  tokenizer.py  type_checker.py
